--- a/home/css/index.css
+++ b/home/css/index.css
@@ -15,6 +15,10 @@
 	background: yellow;
 	font-weight: bold;
 }
+.col-md-7 h4{
+	background: yellow;
+	font-weight: bold;
+}
 /*主营业务*/
 .index_top{
 	border: 1px solid black;
@@ -72,26 +76,37 @@
 }
 
 .index_bottom .start_list .col-md-3{
-	height: 25.12rem;
 	background:#ffffff;
 	margin: 4rem 0 4rem 0;
 	box-shadow: 0px 10px 15px #cccccc;
-	background-image:url(../img/top_title.png);
+	/*background-image:url(../img/top_title.png);
 	background-repeat:no-repeat;
-	background-position:5% 0%;
+	background-position:7% 0%;*/
 }
+/*明星图片*/
 .index_bottom .start_list .col-md-3 #start_img{
-	width: 10rem;
-	height: 10rem;
-	border-radius: 50%;
-	border: 2px solid #28D964;
+	width: 100%;
+	height: 70%;
+	position: relative;
+	box-shadow: 0px 10px 15px #cccccc;
 }
+.index_bottom .start_list .col-md-3 #start_img .img-fluid{
+	width: 100%;
+}
+/*明星名字*/
 .index_bottom .start_list .col-md-3 #start_name{
-	color: red;
-	margin-bottom: 0!important;
+	color:#33A55A;
+	font-weight: bold;
+	margin-bottom:1rem;
+	margin-top: 1rem;
+}
+/*明星类型*/
+.index_bottom .start_list .col-md-3 #start_detail{
+	margin-bottom: 1rem;
 }
 .index_bottom .start_list .col-md-3 .start_num{
 	width: 70%;
+	margin-bottom: 1rem;
 }
 
 /*最新要闻*/
@@ -156,6 +171,44 @@
 	font-size: .87rem;
 }
 
+/*媒体查询*/
+@media only screen and (min-width:768px) {
+	.index_middle .g_img{
+		width: 50%;
+		/*padding-left: 15px;*/
+	}
+	.index_middle .g_paper{
+		width: 47%;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.index_bottom .start_list .col-md-3{
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
+@media only screen and (max-width:768px) {
+	.index_news .news_box .list_detail .tab_Date{
+		width: 22%;
+		height: 80%;
+		background:rgba(51,165,90,1)
+	}
+	.index_news .news_box .list_detail .tab_detail{
+		width: 76%;
+	}
+	.index_middle .g_img{
+		width: 100%;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.index_middle .g_paper{
+		width: 100%;
+		padding-left: 15px;
+		padding-right: 15px;
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+}
 
 /*新闻列表右边*/
 /*.index_news .news_box .news_list{
