--- a/home/css/index.css
+++ b/home/css/index.css
@@ -1,6 +1,20 @@
 
 
-
+/*返回顶部*/
+.fh_top{
+	position:fixed;
+	bottom: 5px;
+	right: 5px;
+	width: 3.12rem;
+	height: 3.12rem;
+	z-index: 999;
+	background: #333333;
+	cursor: pointer;
+}
+.fh_top i{
+	font-size: 1.6rem;
+	color: #ffffff;
+}
 /*轮播图li下标颜色*/
 .carousel-indicators .active{
 	background-color: #29CC5F!important;
